--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "concurrently": "^4.1.0",
     "express": "^4.16.4",
     "node": "^12.2.0",
-    "nodemon": "^1.19.0"
+    "nodemon": "^1.19.0",
+    "socket.io": "^2.2.0"
   }
 }
