--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-highlight.js": "^1.0.7",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "socket.io-client": "^2.2.0",
