--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,12 @@
     "antd": "^3.18.1",
     "http-proxy-middleware": "^0.19.1",
     "moment": "^2.24.0",
+    "prismjs": "^1.16.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-highlight.js": "^1.0.7",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
+    "react-simple-code-editor": "^0.9.10",
     "socket.io-client": "^2.2.0",
     "styled-components": "^4.2.0",
     "styled-reset": "^2.0.10"
