--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.0.1",
     "react-simple-code-editor": "^0.9.10",
     "socket.io-client": "^2.2.0",
     "styled-components": "^4.2.0",
