--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "dependencies": {
     "antd": "^3.18.1",
-    "http-proxy-middleware": "^0.19.1",
     "moment": "^2.24.0",
+    "node": "^12.3.0",
     "prismjs": "^1.16.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
