--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,10 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "dev": "concurrently \"npm run start\" \"npm run start --prefix ../client\""
   },
   "author": "",
@@ -16,5 +15,7 @@
     "node": "^12.3.0",
     "nodemon": "^1.19.0",
     "socket.io": "^2.2.0"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
